--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.15.2",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.4",
     "uuid": "^3.4.0"
   }
 }
